<resources>
    <string name="app_name">Chef\'s Corner</string>

    <string name="default_web_client_id">543620628181-rudc55ev2c2rn3gvad6qfalcdvlg88rg.apps.googleusercontent.com</string>

    <string name="facebook_app_id">632604309463399</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">48a577988db449a37f7175ff181e8b3e</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up"><u>SignUp</u></string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="or_login_with">OR Login With</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="cook_in_easy_way">Cook in easy way</string>
    <string name="save_delicious_recipes_in_one_place_nand_get_personalized_content">Save delicious recipes in one place \nand get personalized content</string>
    <string name="display_name">Display Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="singup">SingUp</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="_login"><u>Login</u></string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="break_fast">Break Fast</string>
    <string name="deserts">Deserts</string>
    <string name="loading">Loading ...</string>
    <string name="suggested_categories">Suggested Categories</string>
    <string name="edit_your_profile"><u>Edit Your Profile</u></string>
    <string name="general_settings">General Settings</string>
    <string name="logout">Logout</string>
    <string name="recipe">Recipe</string>
    <string name="common_ingredients">Common Ingredients</string>
    <string name="view_all"><u>View All</u></string>
    <string name="most_popular_categories">Most Popular Categories</string>
    <string name="search_by_ingredients">Search by Ingredients</string>
    <string name="explore_meals_by_areas">Explore Meals by Areas</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_restored">Internet Connection Restored</string>
    <string name="guest">Guest</string>
    <string name="sign_up_for_more_features">Sign Up for More Features</string>
    <string name="guest_text">Add recipes to your favourite list or add it to your plan over the current Week and More!</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="areas">Areas</string>
    <string name="remove_from_your_plan">Remove From Your Plan</string>
    <string name="you_cannot_remove_meal_from_plan_without_internet_connection">You Cannot Remove Meal From Plan Without Internet Connection</string>
    <string name="you_cannot_remove_meal_from_favourites_without_internet_connection">You cannot remove meal from favourites without internet connection</string>
    <string name="an_error_occurred_check_your_internet_connection">An error occurred check your connection</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="permission_denied">Permission denied</string>
    <string name="search_with_area_name">Search by area</string>
    <string name="search_with_meal_name">Search by meal</string>
    <string name="search_with_ingredient_name">Search by ingredient</string>
    <string name="search_by_category_area_or_ingredient">Search by category, area or ingredient</string>
    <string name="google_sign_in_failed">Google Sign-In failed</string>
    <string name="facebook_login_failed">"Facebook login Failed: "</string>
    <string name="facebook_login_canceled">Facebook login canceled</string>
    <string name="you_cannot_remove_a_meal_without_internet_connection">You cannot remove a meal without internet connection</string>
    <string name="recently_viewed_meals">Recently Viewed Meals</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="skip"><u>Skip</u></string>
    <string name="previous">Previous</string>
    <string name="find_your_perfect_recipe">Find Your Perfect Recipe</string>
    <string name="explore_a_vast_collection_of_delicious_recipes_from_quick_meals_to_gourmet_dishes_whatever_you_re_craving_we_ve_got_the_perfect_recipe_for_you">Explore a vast collection of delicious recipes, from quick meals to gourmet dishes. Whatever you\'re craving, we’ve got the perfect recipe for you!</string>
    <string name="easy_to_follow_instructions">Easy-to-Follow Instructions</string>
    <string name="every_recipe_comes_with_clear_step_by_step_instructions_and_ingredients_making_cooking_easy_and_enjoyable_for_everyone_from_beginners_to_chefs">Every recipe comes with clear, step-by-step instructions and ingredients, making cooking easy and enjoyable for everyone—from beginners to chefs!</string>
    <string name="save_your_favorites">Save Your Favorites</string>
    <string name="bookmark_your_favorite_recipes_create_your_personal_collection_and_access_them_anytime_cooking_has_never_been_this_convenient">Bookmark your favorite recipes, create your personal collection, and access them anytime. Cooking has never been this convenient!</string>
</resources>