<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Ui.Base.Favorites.FavoritesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guestView"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/login_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_for_more_features"
            android:textAlignment="center"
            android:textSize="18dp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/login_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:id="@+id/guesttitle"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guest_text"
            android:textSize="14dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@+id/guesttitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="20dp"
            android:textColor="@color/charcoalGray"
            android:layout_marginTop="10dp"
            android:id="@+id/sub_title"
            />



        <TextView
            android:id="@+id/signUpBtn"
            android:textColor="@color/mainColor"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16dp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>