<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:id="@+id/loginLayout"
    >



    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo2"
        android:id="@+id/logo"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:id="@+id/logo_title"
        android:textSize="32dp"
        />

    <TextView
        android:id="@+id/logo_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/logo_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cook_in_easy_way"
        android:textColor="@color/white"
        android:textSize="16sp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_sub_title"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/emailCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/email_ic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/separatorLine"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/mainColor"
                    app:layout_constraintBottom_toBottomOf="@id/mailIcon"
                    app:layout_constraintStart_toEndOf="@id/mailIcon"
                    app:layout_constraintTop_toTopOf="@id/mailIcon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:hintEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/separatorLine"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/slateGray"
                        android:textSize="12dp"

                        />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/passwordCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/emailCard"
            app:strokeColor="@color/lightGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/passIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/password_ic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/separatorLine2"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/mainColor"
                    app:layout_constraintBottom_toBottomOf="@id/passIcon"
                    app:layout_constraintStart_toEndOf="@id/passIcon"
                    app:layout_constraintTop_toTopOf="@id/passIcon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:hintEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/separatorLine2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/slateGray"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/passwordCard"
            app:layout_constraintTop_toBottomOf="@id/passwordCard" />

        <TextView
            android:id="@+id/ortxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/or_login_with"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/passwordCard"
            app:layout_constraintStart_toStartOf="@id/passwordCard"
            app:layout_constraintTop_toBottomOf="@id/forget_password" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            app:dividerColor="@color/mainColor"
            app:layout_constraintBottom_toBottomOf="@id/ortxt"
            app:layout_constraintEnd_toStartOf="@id/ortxt"
            app:layout_constraintStart_toStartOf="@id/emailCard"
            app:layout_constraintTop_toTopOf="@id/ortxt" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            app:dividerColor="@color/mainColor"
            app:layout_constraintBottom_toBottomOf="@id/ortxt"
            app:layout_constraintEnd_toEndOf="@id/passwordCard"
            app:layout_constraintStart_toEndOf="@id/ortxt"
            app:layout_constraintTop_toTopOf="@id/ortxt" />

        <LinearLayout
            android:id="@+id/fglay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ortxt">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/googleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="10dp"
                    android:src="@drawable/google_icon" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/facebookBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="#485a96"
                app:cardCornerRadius="100dp"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/facebook_icon" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/fglay" />

        <TextView
            android:id="@+id/dontTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/loginBtn"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />

        <TextView
            android:id="@+id/signUpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/dontTxt"
            app:layout_constraintStart_toEndOf="@id/dontTxt"
            app:layout_constraintTop_toTopOf="@id/dontTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:visibility="gone"
        android:id="@+id/progress_bar"
        />


</androidx.constraintlayout.widget.ConstraintLayout>